; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_genn.c_GENERAL_NAME_set0_othername.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_v3_genn.c_GENERAL_NAME_set0_othername.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32* }

@GEN_OTHERNAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GENERAL_NAME_set0_othername(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = call %struct.TYPE_4__* (...) @OTHERNAME_new()
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %8, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %11 = icmp eq %struct.TYPE_4__* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %28

13:                                               ; preds = %3
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @ASN1_TYPE_free(i32* %16)
  %18 = load i32*, i32** %6, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 1
  store i32* %18, i32** %20, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32* %21, i32** %23, align 8
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* @GEN_OTHERNAME, align 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %27 = call i32 @GENERAL_NAME_set0_value(i32* %24, i32 %25, %struct.TYPE_4__* %26)
  store i32 1, i32* %4, align 4
  br label %28

28:                                               ; preds = %13, %12
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local %struct.TYPE_4__* @OTHERNAME_new(...) #1

declare dso_local i32 @ASN1_TYPE_free(i32*) #1

declare dso_local i32 @GENERAL_NAME_set0_value(i32*, i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
